--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,7 @@ services:
       - ./gateway/app:/var/www/project
       - ./gateway/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - gateway-php84-services
+      - gateway-php84-service
     networks:
       - retrospective-network
 
