--- a/gateway/app/composer.json
+++ b/gateway/app/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
+        "overblog/graphql-bundle": "^1.7",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
         "symfony/flex": "^2",
@@ -19,6 +20,7 @@
         "symfony/yaml": "7.2.*"
     },
     "require-dev": {
+        "overblog/graphiql-bundle": "^1.0",
         "symfony/maker-bundle": "^1.62",
         "symfony/stopwatch": "7.2.*",
         "symfony/web-profiler-bundle": "7.2.*"
