--- a/gateway/app/config/routes.yaml
+++ b/gateway/app/config/routes.yaml
@@ -3,3 +3,12 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+gesdinet_jwt_refresh_token:
+    path: /api/token/refresh
+    methods: [POST]
+
+api_login_check:
+    path: /api/login_check
+    methods: [POST]
+    controller: lexik_jwt_authentication.controller.login_check
