--- a/gateway/app/.env
+++ b/gateway/app/.env
@@ -17,6 +17,7 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=
+SITE_URL=http://localhost:8081
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
