--- a/gateway/app/tools/composer.json
+++ b/gateway/app/tools/composer.json
@@ -1,6 +1,7 @@
 {
-
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.69"
+        "friendsofphp/php-cs-fixer": "^3.69",
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-doctrine": "^2.0"
     }
 }
