--- a/gateway/app/config/graphql/types/Mutation.types.yaml
+++ b/gateway/app/config/graphql/types/Mutation.types.yaml
@@ -2,15 +2,23 @@ Mutation:
   type: object
   config:
     fields:
-      emailVerification:
+      EmailVerification:
         type: "SiteMessage"
         description: "Handles email verification using a verification token"
         args:
           verificationToken: "String!"
         resolve: '@=mutation("App\\GraphQL\\Mutation\\AuthMutation::emailVerificationTokenMutation", args)'
-      emailVerificationTokenResend:
+      EmailVerificationTokenResend:
         type: "SiteMessage"
         description: "Resends the email verification token to the user."
         args:
           email: "String!"
         resolve: '@=mutation("App\\GraphQL\\Mutation\\AuthMutation::emailVerificationTokenResendMutation", args)'
+      UserRegistration:
+        type: "UserRegistrationResponse"
+        description: "Register user"
+        args:
+          userRegistrationInput: "UserRegistrationInput!"
+        resolve: '@=mutation("App\\GraphQL\\Mutation\\AuthMutation::userRegistrationMutation", args)'
+
+
