--- a/gateway/app/config/graphql/types/Query.types.yaml
+++ b/gateway/app/config/graphql/types/Query.types.yaml
@@ -3,7 +3,6 @@ Query:
   config:
     description: "User ORM repository"
     fields:
-      User:
+      user:
         type: "User"
         resolve: '@=query("App\\GraphQL\\Resolver\\UserResolver::getUser")'
-
