--- a/gateway/app/config/packages/lexik_jwt_authentication.yaml
+++ b/gateway/app/config/packages/lexik_jwt_authentication.yaml
@@ -2,5 +2,5 @@ lexik_jwt_authentication:
     secret_key:  '%kernel.project_dir%/config/jwt/private.pem'
     public_key:  '%kernel.project_dir%/config/jwt/public.pem'
     pass_phrase: '%env(JWT_PASSPHRASE)%'
-    token_ttl:   1800  # 30 minutes
+    token_ttl:   7200  # 2h
     user_id_claim: email
