--- a/gateway/app/config/graphql/types/RetrospectiveParticipant.types.yaml
+++ b/gateway/app/config/graphql/types/RetrospectiveParticipant.types.yaml
@@ -16,11 +16,29 @@ RetrospectiveParticipant:
         type: "DateTime!"
         description: "Timestamp of the last update to the participant's record"
       user:
-        type: "User!"
+        type: "Participant!"
         description: "The user participating in the retrospective"
       retrospective:
         type: "Retrospective!"
         description: "The retrospective the user is participating in"
+
+Participant:
+  type: object
+  config:
+    description: "Represents a retrospective participant with their status and user information"
+    fields:
+      id:
+        type: "Int!"
+        description: "The unique identifier of the user"
+      firstName:
+        type: "String!"
+        description: "The first name of the user"
+      lastName:
+        type: "String!"
+        description: "The last name of the user"
+      email:
+        type: "String!"
+        description: "The email address used for user authentication and communication"
 
 RetrospectiveParticipantStatus:
   type: enum
