--- a/gateway/app/config/graphql/types/Retrospective.types.yaml
+++ b/gateway/app/config/graphql/types/Retrospective.types.yaml
@@ -27,6 +27,11 @@ Retrospective:
       retrospectiveParticipants:
         type: "[RetrospectiveParticipant]"
         description: "List of participants in the retrospective"
+      cards:
+        type: "[Card]"
+        description: "List of cards associated with the retrospective"
+
+
 
 RetrospectiveCollectionResponse:
   type: object
