--- a/gateway/php/Dockerfile
+++ b/gateway/php/Dockerfile
@@ -1,14 +1,17 @@
 FROM php:8.4-fpm
 
 # Install system dependencies efficiently
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     g++ \
     git \
     libicu-dev \
     make \
     libzip-dev \
     zlib1g-dev \
-    && rm -rf /var/lib/apt/lists/*
+    librabbitmq-dev \
+    acl \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
 
 # Install PHP extensions
 RUN docker-php-ext-configure zip \
@@ -17,9 +20,12 @@ RUN docker-php-ext-configure zip \
         opcache \
         pdo \
         pdo_mysql \
-        zip \
-    && pecl install apcu \
-    && docker-php-ext-enable apcu
+        zip
+
+RUN pecl install apcu \
+    && docker-php-ext-enable apcu \
+    && pecl install amqp \
+    && docker-php-ext-enable amqp
 
 # Set working directory
 WORKDIR /var/www/project
@@ -30,5 +36,6 @@ COPY --from=composer:2 /usr/bin/composer /usr/local/bin/composer
 # Install Symfony CLI
 RUN curl -1sLf 'https://dl.cloudsmith.io/public/symfony/stable/setup.deb.sh' | bash \
     && apt-get update \
-    && apt-get install symfony-cli \
-    && rm -rf /var/lib/apt/lists/*
+    && apt-get install -y symfony-cli \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
