--- a/notification-service/app/config/packages/api_platform.yaml
+++ b/notification-service/app/config/packages/api_platform.yaml
@@ -1,7 +1,12 @@
 api_platform:
-    title: Hello API Platform
+    title: Notification Service API
     version: 1.0.0
     defaults:
         stateless: true
         cache_headers:
             vary: ['Content-Type', 'Authorization', 'Origin']
+    swagger:
+        api_keys:
+            apiKey:
+                name: X-API-KEY
+                type: header
