--- a/notification-service/app/config/packages/security.yaml
+++ b/notification-service/app/config/packages/security.yaml
@@ -12,7 +12,6 @@ security:
         api:
             pattern: ^/api/(.*)
             stateless: true
-            methods: [ GET, POST, PATCH ]
             entry_point: App\Security\ApiKeyAuthenticatorEntryPoint
             custom_authenticators:
                 - App\Security\ApiKeyAuthenticator
@@ -30,7 +29,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/api, roles: ROLE_ADMIN }
+#        - { path: ^/api, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
