--- a/notification-service/app/config/services.yaml
+++ b/notification-service/app/config/services.yaml
@@ -22,6 +22,12 @@ services:
         arguments:
             $apiKey: '%env(API_KEY)%'
 
+    # OPENAPI CONFIGURATION
+    App\OpenApi\UserNotificationsOpenApiFactory:
+        decorates: 'api_platform.openapi.factory'
+        arguments:
+            $openApiFactory: '@App\OpenApi\UserNotificationsOpenApiFactory.inner'
+
 
 
     # add more service definitions when explicit configuration is needed
