--- a/notification-service/app/config/packages/api_platform.yaml
+++ b/notification-service/app/config/packages/api_platform.yaml
@@ -10,3 +10,9 @@ api_platform:
             apiKey:
                 name: X-API-KEY
                 type: header
+    collection:
+        pagination:
+            items_per_page_parameter_name: itemsPerPage
+            page_parameter_name: page
+            enabled_parameter_name: pagination
+
