rabbit mq setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,8 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: retrospective
       RABBITMQ_DEFAULT_PASS: retrospective
+    volumes:
+      - retrospective-rabbitmq-data:/var/lib/rabbitmq
     networks:
       - retrospective-network
 
@@ -76,6 +78,7 @@ services:
       PHP_CS_FIXER_IGNORE_ENV: 1 #cs fixer still don't support php 8.4, fix flag
       NOTIFICATIONS_API_URL: 'http://notification-nginx-service:80'
       NOTIFICATIONS_API_KEY: 'f8JhT7kL9pQ2mN4rX6yC1bV3zG5aW0oU'
+      AMQP_DSN: 'amqp://retrospective:retrospective@retrospective-rabbitmq-service:5672'
 
   gateway-nginx-service:
     image: nginx:stable-alpine
@@ -105,6 +108,7 @@ services:
     environment:
       PHP_CS_FIXER_IGNORE_ENV: 1 #cs fixer still don't support php 8.4, fix flag
       API_KEY: 'f8JhT7kL9pQ2mN4rX6yC1bV3zG5aW0oU'
+      AMQP_DSN: 'amqp://retrospective:retrospective@retrospective-rabbitmq-service:5672'
 
   notification-nginx-service:
     image: nginx:stable-alpine
@@ -122,3 +126,4 @@ services:
 
 volumes:
   mysql8-retrospective-data:
+  retrospective-rabbitmq-data:
