--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
     image: rabbitmq:3-management
     container_name: rabbitmq-retrospective
     restart: unless-stopped
+    hostname: rabbitmq-retrospective-host
     ports:
       - "5672:5672"   # RabbitMQ default port
       - "15672:15672" # Management UI port
@@ -60,6 +61,36 @@ services:
     ports:
       - "1025:1025" # SMTP server
       - "8025:8025" # Web UI
+    networks:
+      - retrospective-network
+
+  mailer-php84-service:
+    container_name: mailer-service-retrospective
+    build:
+      context: .
+      dockerfile: ./mailer-service/php/Dockerfile
+    volumes:
+      - ./mailer-service/app:/var/www/project
+    networks:
+      - retrospective-network
+    environment:
+      PHP_CS_FIXER_IGNORE_ENV: 1
+      MAILHOG_HOST: 'mailhog-retrospective'
+      MAILHOG_PORT: '1025'
+      AMQP_DSN: 'amqp://retrospective:retrospective@retrospective-rabbitmq-service:5672'
+      MAILER_DSN: 'smtp://mailhog-retrospective:1025'
+      API_KEY: '6a3f8c1e9b2d7a5f4e0c8b9d1a7f3e2c'
+
+  mailer-nginx-service:
+    image: nginx:stable-alpine
+    container_name: mailer-service-retrospective-nginx
+    ports:
+      - "8083:80"
+    volumes:
+      - ./mailer-service/app:/var/www/project
+      - ./mailer-service/nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - mailer-php84-service
     networks:
       - retrospective-network
 
