--- a/gateway/app/config/packages/messenger.yaml
+++ b/gateway/app/config/packages/messenger.yaml
@@ -8,10 +8,27 @@ framework:
                     heartbeat: 60
                     queues:
                         notifications.user.queue:
-                            binding_keys: [ 'notifications.user.send' ]
+                            binding_keys: ['notifications.user.send']
+                            arguments:
+                                durable: true
                     exchange:
                         name: 'notifications.user.exchange.direct'
                         type: 'direct'
 
+            mailer_transport:
+                dsn: '%env(AMQP_DSN)%'
+                serializer: 'messenger.transport.symfony_serializer'
+                options:
+                    heartbeat: 60
+                    queues:
+                        mailer.queue:
+                            binding_keys: [ 'mailer.send' ]
+                            arguments:
+                                durable: true
+                    exchange:
+                        name: 'mailer.exchange.direct'
+                        type: 'direct'
+
         routing:
             'App\Message\UserNotificationMessage': user_notification_transport
+            'App\Message\EmailMessage': mailer_transport
